prog/1stPartyLibs/quirrel/quirrel/testData/diagnostics/compilation_errors/type_inference/test_string_concat_to_int.diag.txt
ERROR: expression of type 'string' cannot be assigned to type 'int'
testData/diagnostics/compilation_errors/type_inference/test_string_concat_to_int.nut:4:0

local n: int = 42
local result: int = s + n
^------------------------
return result


